# oort_ai

./: Cargo.toml  kinematics.txt
src/: build.rs  bundle_input.rs  constants.rs  f64_extensions.rs  graph_example.rs  graphing.rs  kinematics.rs  lib.rs  vec_extensions.rs
src/ais/: ai.rs  ai_selector.rs  deflection.rs  kinematics_test.rs  mod.rs
src/graphing/: graphing.rs  licence.txt  mod.rs
